k8s/infrafiles/Working/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy: {}
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - env:
            - name: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY
              value: ' TRACE'
            - name: SPRING_PROFILES_ACTIVE
              value: docker
            - name: spring.security.oauth2.resourceserver.jwt.issuer-uri
              value: http://keycloak-service:8080/realms/spring_boot
            - name: eureka.client.serviceUrl.defaultZone
              value: http://root:root@discovery-server-service:8761/eureka/web/              
          image: hmishra609/api-gateway:latest
          name: api-gateway
          ports:
            - containerPort: 8080
            - containerPort: 8181
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8080
      nodePort: 30090  
  selector:
    app: api-gateway
