k8s/infrafiles/Working/discovery-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: discovery-server
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  strategy: {}
  template:
    metadata:

      labels:
        app: discovery-server
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: docker
            - name: eureka.client.serviceUrl.defaultZone
              value: http://discovery-server-service:8761/eureka/            
          image: hmishra609/discovery-server:latest
          name: discovery-server
          ports:
            - containerPort: 8761
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: discovery-server
  name: discovery-server-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
      nodePort: 30084
  selector:
    app: discovery-server
status:
  loadBalancer: {}
