k8s/infrafiles/Working/postgres-inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres-inventory
  name: postgres-inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-inventory
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-inventory
    spec:
      containers:
        - args:
            - -p
            - "5432"
          image: postgres
          name: postgres-inventory
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /data/postgres
              name: postgres-inventory-claim0
      restartPolicy: Always
      volumes:
        - name: postgres-inventory-claim0
          persistentVolumeClaim:
            claimName: postgres-inventory-claim0

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres-inventory
  name: postgres-inventory
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: postgres-inventory
status:
  loadBalancer: {}
