k8s/infrafiles/Working/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: Recreate
  template:
    metadata:

      labels:
        app: keycloak
    spec:
      containers:
        - args:
            - start-dev
            - --import-realm
          image: quay.io/keycloak/keycloak:21.1.1
          name: keycloak
          ports:
            - containerPort: 8080
            - containerPort : 30085
          resources: {}
          volumeMounts:
            - mountPath: /opt/keycloak/data/import/
              name: keycloak-claim0
      restartPolicy: Always
      volumes:
        - name: keycloak-claim0
          persistentVolumeClaim:
            claimName: keycloak-claim0
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30097
  selector:
    app: keycloak
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
spec:
  rules:
    - host: "keycloak-service"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
